@@ -70,6 +70,7 @@ int dbmail_imap_session_discard_to_eol(struct ImapSession *self);
 int dbmail_imap_session_printf(struct ImapSession * self, char * message, ...);
 
 int dbmail_imap_session_set_state(struct ImapSession *self, int state);
+int client_is_authenticated(struct ImapSession * self);
 int check_state_and_args(struct ImapSession * self, const char * command, int minargs, int maxargs, int state);
 int dbmail_imap_session_handle_auth(struct ImapSession * self, char * username, char * password);
 int dbmail_imap_session_prompt(struct ImapSession * self, char * prompt, char * value);
