@@ -147,6 +147,11 @@ MAX_ERRORS            = 500
 TIMEOUT               = 300             
 
 # 
+# Idle time allowed before a connection is shut off if you have not logged in yet.
+#
+login_timeout         = 60
+
+# 
 # If yes, resolves IP addresses to DNS names when logging.
 #
 RESOLVE_IP            = no
