@@ -126,7 +126,10 @@ int pop3_handle_connection(clientinfo_t * ci)
 			break;
 
 		/* set the timeout counter */
-		alarm(ci->timeout);
+		if (session.state == POP3_AUTHORIZATION_STATE)
+			alarm(ci->login_timeout);
+		else
+			alarm(ci->timeout);
 
 		/* clear the buffer */
 		memset(buffer, 0, INCOMING_BUFFER_SIZE);
